--- a/nfl_fantasy_eda.ipynb
+++ b/nfl_fantasy_eda.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# NFL Fantasy Analysis\n",
     "\n",
+    "Context, I'm playing fantasy football using Yahoo fantasy app.\n",
+    "\n",
     "Here I'm going to try to anazlyse the stats that help the players on my fantasy roster, I may even train a model for them each (which may require a lot more historial data). Some requirements\n",
     "1. I need to be able to quickly grab the players & defense on my roster as I will have to change players each week\n",
     "2. The first analysis I need to do is on the stats that get me the most post\n",
@@ -14,8 +16,9 @@
     "\n",
     "\n",
     "## Questions\n",
-    "1. Dylan asserted that its better to pickup a QB later as the difference in points between a good and a bad qb isn't as great as the difference between a good RB/WR\n",
-    "2. Does t\n",
+    "1. It was suggested to me that its better to pickup a QB later as the difference in points between a good and a bad qb isn't as great as the difference between a good RB/WR\n",
+    "2. What factors affect the number of points a player can earn?\n",
+    "3. How can I use statistical techniques to make better decisions for who to draft (or at least confirm the rankings in the yahoo app for myself).\n",
     "\n"
    ]
   },
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,84 +128,84 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>17168</th>\n",
-       "      <td>Dezmon Patmon</td>\n",
+       "      <th>17146</th>\n",
+       "      <td>Mike Thomas</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2021-11-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17266</th>\n",
+       "      <td>Alex Erickson</td>\n",
        "      <td>L</td>\n",
        "      <td>2021-11-28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17638</th>\n",
-       "      <td>Ray-Ray McCloud</td>\n",
+       "      <th>4090</th>\n",
+       "      <td>Zach Ertz</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2019-11-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14233</th>\n",
+       "      <td>Cole Kmet</td>\n",
        "      <td>W</td>\n",
-       "      <td>2021-12-05</td>\n",
+       "      <td>2021-10-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>592</th>\n",
-       "      <td>Tommy Sweeney</td>\n",
-       "      <td>W</td>\n",
-       "      <td>2019-09-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11042</th>\n",
-       "      <td>Tony Pollard</td>\n",
-       "      <td>L</td>\n",
-       "      <td>2020-12-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17065</th>\n",
-       "      <td>Michael Gallup</td>\n",
-       "      <td>L</td>\n",
-       "      <td>2021-11-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3164</th>\n",
-       "      <td>Chris Godwin</td>\n",
-       "      <td>L</td>\n",
-       "      <td>2019-11-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12011</th>\n",
-       "      <td>Darrynton Evans</td>\n",
-       "      <td>L</td>\n",
-       "      <td>2020-12-27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17602</th>\n",
+       "      <th>18908</th>\n",
        "      <td>Chris Myarick</td>\n",
        "      <td>L</td>\n",
-       "      <td>2021-12-05</td>\n",
+       "      <td>2022-01-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14153</th>\n",
-       "      <td>Joe Burrow</td>\n",
-       "      <td>W</td>\n",
-       "      <td>2021-09-30</td>\n",
+       "      <th>18346</th>\n",
+       "      <td>Olamide Zaccheaus</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2021-12-19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1175</th>\n",
-       "      <td>Jonnu Smith</td>\n",
+       "      <th>85</th>\n",
+       "      <td>Trent Sherfield</td>\n",
+       "      <td>D</td>\n",
+       "      <td>2019-09-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1562</th>\n",
+       "      <td>Danny Vitale</td>\n",
        "      <td>W</td>\n",
-       "      <td>2019-09-29</td>\n",
+       "      <td>2019-10-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17983</th>\n",
+       "      <td>Laquon Treadwell</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2021-12-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6911</th>\n",
+       "      <td>John Brown</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2020-09-20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                player player_won  game_date\n",
-       "17168    Dezmon Patmon          L 2021-11-28\n",
-       "17638  Ray-Ray McCloud          W 2021-12-05\n",
-       "592      Tommy Sweeney          W 2019-09-15\n",
-       "11042     Tony Pollard          L 2020-12-08\n",
-       "17065   Michael Gallup          L 2021-11-25\n",
-       "3164      Chris Godwin          L 2019-11-03\n",
-       "12011  Darrynton Evans          L 2020-12-27\n",
-       "17602    Chris Myarick          L 2021-12-05\n",
-       "14153       Joe Burrow          W 2021-09-30\n",
-       "1175       Jonnu Smith          W 2019-09-29"
+       "                  player player_won  game_date\n",
+       "17146        Mike Thomas          W 2021-11-28\n",
+       "17266      Alex Erickson          L 2021-11-28\n",
+       "4090           Zach Ertz          L 2019-11-24\n",
+       "14233          Cole Kmet          W 2021-10-03\n",
+       "18908      Chris Myarick          L 2022-01-02\n",
+       "18346  Olamide Zaccheaus          L 2021-12-19\n",
+       "85       Trent Sherfield          D 2019-09-08\n",
+       "1562        Danny Vitale          W 2019-10-06\n",
+       "17983   Laquon Treadwell          L 2021-12-12\n",
+       "6911          John Brown          W 2020-09-20"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -375,21 +378,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just some initial exploration of the data."
+    "Just some initial exploration of the data. Its helpful throughout to break things down by"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x233e9a96020>"
+       "<seaborn.axisgrid.FacetGrid at 0x2454e1a5390>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -414,8 +417,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Needed a way to see the distribution of fantasy points by player and get a measure for central tendency and variation. `describe` is just the dataframe method from pandas with a histogram graphed as well. I also define a dictionary to store the data about my roster on Yahoo."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -460,17 +470,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's where things start getting serious. Started out just looking at the overall distribution of fantasy points using box and whisker plots and violin plots. Eventually had the idea to plot them with the wins and losses separate."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x233f2ef41f0>"
+       "<seaborn.axisgrid.FacetGrid at 0x2455f12c790>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -490,6 +507,11 @@
     "#sns.violinplot(data = off_stats[off_stats['player'].isin(fan_roster_dict['line'])], x = 'yahoo_fan_pts', y = 'player')\n",
     "sns.catplot(data = off_stats[off_stats['player'].isin(fan_roster_dict['line'])], x = 'yahoo_fan_pts', y = 'player', hue = 'player_won', kind = 'box')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -697,20 +719,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistical Analysis\n",
-    "\n",
-    "\n",
-    "\n",
-    "Looking at my box and whisker plo\n",
-    "- Look at subgroups\n",
-    "  - Individual player - this will help when deciding whether to bench or pickup between 2 similar average pts performance - if one wins or one loses\n",
-    "  - By Position\n",
-    "  - "
+    "# Statistical Analysis\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My First crack at doing Welch's *t*-test on a player. This can be used since\n",
+    "1. The wins are statistically independent of losses (not necessarily totally true, but effect is very small I suspect)\n",
+    "1. Wins and Losses are Normally Distributed\n",
+    "1. We don't know if the variance of the population (their true variance) is the same for W's and L's. (if we wanted to assume that, then we could use the *Student* *t*-test instead)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +743,7 @@
        "Ttest_indResult(statistic=2.740840507177392, pvalue=0.01138455575181086)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +757,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Findings: at large quarterbacks are the only major position in fantasy football that sho"
+    "### By Position\n",
+    "\n",
+    "Do the same hypothesis testing on each position. Interestingly, they all seem to indicate that their true means differ, using Student *t*-test. However, its very clear that the Quarterback position is most sensitive by a lot on average to their fantasy performance being affected by whether they win or lose.. However the WR, RB, and TE positions are somewhat cluttered with players who score very little (I haven't looked into it too much yet)."
    ]
   },
   {
@@ -791,8 +817,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, its Week 5 in our league and I'm up against Dylan. we're close I'm at 95 points he's at 97 and we both have one game left, I have 2 players on bengals he has 1. Did the analysis of who performs better - Ja'Marr Chase is a better losing player than Joe Mixon on my team. Also in conversation Dylan asked me to check out Derrick Henry - he basically naps if his team is losing... \n",
+    "\n",
+    "For each player I dod the same one tailed Welch's *t*-test, finding that only Tyler Boyd and Ja'Marr Chase do not show a statistically significant difference in their average points scored for W's vs L's. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -809,10 +844,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x233fb0fc640>"
+       "<seaborn.axisgrid.FacetGrid at 0x2455f182d40>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
