added explanation to analysis

--- a/nfl_fantasy_eda.ipynb
+++ b/nfl_fantasy_eda.ipynb
@@ -795,7 +795,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My First crack at doing Welch's *t*-test on a player. This can be used since\n",
+    "A hypothesis test normally tests whether a sample statistic can be generalized to the population. If you look at players games as samples of their true potential, then hypothesis testing makes sense as a way to determine things about the players true ability by looking at the sample (their ability over a finite set of games).\n",
+    "\n",
+    "My First crack at doing Welch's *t*-test on a players win fantasty points vs their loss fantasy points. I started here because I was trying to decide between picking up a player who had a great average but his team seemed in danger of losing. This can be used since\n",
     "1. The wins are statistically independent of losses (not necessarily totally true, but effect is very small I suspect)\n",
     "1. Wins and Losses are Normally Distributed (kind of...)\n",
     "1. We don't know if the variance of the population (their true variance) is the same for W's and L's. (if we wanted to assume that, then we could use the *Student* *t*-test instead).\n",
@@ -941,6 +943,15 @@
     "\n",
     "sns.catplot(data = off_stats[off_stats['player'].isin(loss_underperformers)], x = 'yahoo_fan_pts', y = 'player', hue = 'player_won', kind = 'box')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overperformers vs Underperformers\n",
+    "\n",
+    "Probably a more basic analysis that I should have done before the above - test whether the true player skill is above or below the sample mean. This could give some confidence level as to whether a player can be expected to overearn or under earn on a given night."
    ]
   },
   {
