Started setting up classes, working on terminal ap

--- a/nfl_fantasy_eda.ipynb
+++ b/nfl_fantasy_eda.ipynb
@@ -32,6 +32,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "First step is to load the data, we will see that I decide to do a bit of good ol' fashioned hypothesis testing here, so I'm bringing in `scipy.stats.ttest_ind` to allow me to use Welch's *t*-test"
    ]
@@ -62,11 +72,11 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Loads the datasets\n",
-    "off_stats = pd.read_csv(\"nfl_pass_rush_receive_raw_data.csv\")\n",
-    "kick_stats = pd.read_csv(\"nfl_kicking_raw_data.csv\")\n",
-    "def_stats = pd.read_csv(\"nfl_dst_raw_data.csv\")\n",
-    "nfl_teams = pd.read_csv(\"nfl_teams.csv\")\n",
-    "fan_off_points = pd.read_csv(\"fan_off_points.csv\", index_col= \"stat_code\")\n",
+    "off_stats = pd.read_csv(\"Data/nfl_pass_rush_rec_winlose_yahoo_data.csv\")\n",
+    "kick_stats = pd.read_csv(\"Data/nfl_kicking_raw_data.csv\")\n",
+    "def_stats = pd.read_csv(\"Data/nfl_dst_raw_data.csv\")\n",
+    "nfl_teams = pd.read_csv(\"Data/nfl_teams.csv\")\n",
+    "fan_off_points = pd.read_csv(\"Data/fan_off_points.csv\", index_col= \"stat_code\")\n",
     "\n",
     "# Converts relevant date columns in different datasets into datetime format \n",
     "off_stats['game_date'] = pd.to_datetime(off_stats['game_date'])"
@@ -129,81 +139,81 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>19262</th>\n",
-       "      <td>Austin Hooper</td>\n",
+       "      <th>8232</th>\n",
+       "      <td>Andre Roberts</td>\n",
        "      <td>L</td>\n",
-       "      <td>2022-01-03</td>\n",
+       "      <td>2020-10-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19825</th>\n",
-       "      <td>Jauan Jennings</td>\n",
+       "      <th>436</th>\n",
+       "      <td>George Kittle</td>\n",
        "      <td>W</td>\n",
-       "      <td>2022-01-22</td>\n",
+       "      <td>2019-09-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16474</th>\n",
-       "      <td>D'Ernest Johnson</td>\n",
+       "      <th>9813</th>\n",
+       "      <td>Michael Thomas</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2020-11-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1412</th>\n",
+       "      <td>Trey Quinn</td>\n",
        "      <td>L</td>\n",
-       "      <td>2021-11-14</td>\n",
+       "      <td>2019-09-29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7315</th>\n",
-       "      <td>Anthony Firkser</td>\n",
-       "      <td>W</td>\n",
-       "      <td>2020-09-27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17226</th>\n",
-       "      <td>Brandin Cooks</td>\n",
+       "      <th>18852</th>\n",
+       "      <td>Travis Homer</td>\n",
        "      <td>L</td>\n",
-       "      <td>2021-11-28</td>\n",
+       "      <td>2021-12-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1748</th>\n",
-       "      <td>Javon Wims</td>\n",
+       "      <th>3579</th>\n",
+       "      <td>Jack Doyle</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2019-11-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15180</th>\n",
+       "      <td>Colby Parkinson</td>\n",
        "      <td>L</td>\n",
-       "      <td>2019-10-06</td>\n",
+       "      <td>2021-10-17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19729</th>\n",
-       "      <td>Travis Benjamin</td>\n",
+       "      <th>2972</th>\n",
+       "      <td>Darren Fells</td>\n",
        "      <td>W</td>\n",
-       "      <td>2022-01-16</td>\n",
+       "      <td>2019-11-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5218</th>\n",
-       "      <td>Josh Jacobs</td>\n",
+       "      <th>1838</th>\n",
+       "      <td>Cody Core</td>\n",
        "      <td>L</td>\n",
-       "      <td>2019-12-15</td>\n",
+       "      <td>2019-10-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17316</th>\n",
-       "      <td>Elijhaa Penny</td>\n",
+       "      <th>18689</th>\n",
+       "      <td>Derrick Gore</td>\n",
        "      <td>W</td>\n",
-       "      <td>2021-11-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17972</th>\n",
-       "      <td>Alvin Kamara</td>\n",
-       "      <td>W</td>\n",
-       "      <td>2021-12-12</td>\n",
+       "      <td>2021-12-26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 player player_won  game_date\n",
-       "19262     Austin Hooper          L 2022-01-03\n",
-       "19825    Jauan Jennings          W 2022-01-22\n",
-       "16474  D'Ernest Johnson          L 2021-11-14\n",
-       "7315    Anthony Firkser          W 2020-09-27\n",
-       "17226     Brandin Cooks          L 2021-11-28\n",
-       "1748         Javon Wims          L 2019-10-06\n",
-       "19729   Travis Benjamin          W 2022-01-16\n",
-       "5218        Josh Jacobs          L 2019-12-15\n",
-       "17316     Elijhaa Penny          W 2021-11-28\n",
-       "17972      Alvin Kamara          W 2021-12-12"
+       "                player player_won  game_date\n",
+       "8232     Andre Roberts          L 2020-10-13\n",
+       "436      George Kittle          W 2019-09-15\n",
+       "9813    Michael Thomas          W 2020-11-15\n",
+       "1412        Trey Quinn          L 2019-09-29\n",
+       "18852     Travis Homer          L 2021-12-26\n",
+       "3579        Jack Doyle          W 2019-11-17\n",
+       "15180  Colby Parkinson          L 2021-10-17\n",
+       "2972      Darren Fells          W 2019-11-03\n",
+       "1838         Cody Core          L 2019-10-10\n",
+       "18689     Derrick Gore          W 2021-12-26"
       ]
      },
      "execution_count": 2,
@@ -212,34 +222,9 @@
     }
    ],
    "source": [
-    "def add_win_lose_col(off_stats):\n",
-    "    \"\"\"In-place addition of a df column identifying whether the players team won or lost\"\"\"\n",
-    "    \n",
-    "    off_stats['player_won'] = off_stats.apply(lambda row: win_lose_draw(row), axis = 1)\n",
     "\n",
     "\n",
-    "# probably overcomplicating things\n",
-    "def win_lose_draw(row):\n",
-    "    \"\"\"outputs whether the row (which corresponds to a player) with a given side won or lost or drew\"\"\"\n",
     "\n",
-    "    if row['team'] == row['home_team']:\n",
-    "        side = 'home'\n",
-    "    else:\n",
-    "        side = 'vis'\n",
-    "\n",
-    "    side_score = side + '_score'\n",
-    "    #ensures that if the row is on one side, the otherside is the opposite team\n",
-    "    otherside_score = 'vis_score' if side == 'home' else 'home_score'\n",
-    "\n",
-    "    score_difference = row[side_score] - row[otherside_score]\n",
-    "    if  score_difference > 0:\n",
-    "        return \"W\"\n",
-    "    elif score_difference < 0:\n",
-    "        return \"L\"\n",
-    "    else:\n",
-    "        return \"D\"\n",
-    "\n",
-    "add_win_lose_col(off_stats)\n",
     "off_stats[['player', 'player_won', 'game_date']].sample(10)"
    ]
   },
@@ -368,6 +353,7 @@
     "\n",
     "\n",
     "add_fantasy_points_off(off_stats, fan_off_points)\n",
+    "off_stats.to_csv('Data/nfl_pass_rush_rec_winlose_yahoo_data.csv')\n",
     "print(off_stats.shape)\n",
     "print(off_stats.info())\n",
     "\n",
@@ -984,50 +970,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Planning\n",
-    "\n",
-    "### Classes\n",
-    "\n",
-    "Eventually I'm going to add classes to help with organization and speed, I at least need\n",
-    "1. Player\n",
-    "1. Fantasy Roster\n",
-    "1. Team\n",
-    "\n",
-    "#### Player\n",
-    "\n",
-    "1. Data: \n",
-    "  1. Name\n",
-    "  1. Position\n",
-    "  1. Team\n",
-    "  1. Pandas Dataframe - selecting the year and the player, it shoudl also reduce the dataset columns to just ones relevant to the player position.\n",
-    "    - add column with fantasy points per game\n",
-    "  1. Dictionary with metadata\n",
-    "1. Methods:\n",
-    "  1. Constructor - Accepts player and year and grabs data for the player and which year of data\n",
-    "    1. Initializes returning # columns and # entries\n",
-    "  1. Fantasy Analysis - A method that generates a set of graphs or summary graph suite that give a good indication of the player performance\n",
-    "  1. Hypothesis test win-loss fantasy gain.\n",
-    "  1. Other specific graphs\n",
-    "\n",
-    "Grabbing multiple players?\n",
-    "\n",
-    "#### Roster\n",
-    "\n",
-    "1. Data:\n",
-    "  1. Current Date\n",
-    "  2. line\n",
-    "  3. bench\n",
-    "1. \n",
-    "  1. Add\n",
-    "  2. Delete player\n",
-    "  3. Send (to bench or to line)\n",
-    "\n",
-    "#### Team\n",
-    "\n",
-    "1. Data:\n",
-    "1. Methods:"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
